--- a/src/app/Views/Elements/bet-block/bet-block.component.scss
+++ b/src/app/Views/Elements/bet-block/bet-block.component.scss
@@ -3,12 +3,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 3px solid #AAB1B0;
+    border: 5px solid #AAB1B0;
     background: #2C2022;
     border-radius: 10px;
     cursor: pointer;
+    box-sizing: border-box;
     &.selected {
-        border: 3px solid #A90006;
+        border: 5px solid #A90006;
         background: linear-gradient(#F57602, #D52F10);
         .label {
             &.currency {
