--- a/src/app/Views/action-panel/action-panel.component.scss
+++ b/src/app/Views/action-panel/action-panel.component.scss
@@ -1,16 +1,18 @@
     .data {
-        border: 5px solid #b80011;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        background-color: #3E0006;
         flex-direction: column;
-        border-radius: 5px;
+        border-radius: 10px;
         width: initial;
-        
+        app-label-value {
+            display: none;
+        }
         @media screen and (min-width: 992px) {
             width: 100%;
-            padding-inline: 15px;
+            padding-inline: 15px;        
+            border: 5px solid #b80011;
+            background-color: #3E0006;
             display: grid;
             grid-template-columns: auto minmax(0, 4fr) minmax(0, 1fr) auto ;
             border-radius: 10px;
@@ -18,6 +20,9 @@
             height: 100px;
             box-sizing: border-box;
             gap: 0 10px;
+            app-label-value {
+                display: flex;
+            }
         }
 
         .bets {
@@ -84,14 +89,12 @@
 
             &.nominales {
                 flex: 3;
-                display: flex;
-                justify-content: space-evenly;
-                align-items: center;
-                gap: 0 10px;
-
+                grid-template-columns: repeat(5, minmax(0, 1fr));
+                display: grid;
+                width: 100%;
+                gap: 0 20px;
                 @media screen and (min-width: 992px) {
-                    display: grid;
-                    grid-template-columns: repeat(5, minmax(0, 1fr));
+                    gap: 0 10px;
                 }
             }
 
