--- a/src/app/Views/bonus-button/bonus-button.component.scss
+++ b/src/app/Views/bonus-button/bonus-button.component.scss
@@ -6,7 +6,8 @@
     border-radius: 10px;
     border: 5px solid #b80011;
     box-sizing: border-box;
-    @media screen and (min-width: 768px) {
+    height: 75px;
+    @media screen and (min-width: 992px) {
         height: 100px;
     }
 
