--- a/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
+++ b/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
@@ -1,7 +1,25 @@
-<div class="block">
-    <app-nominales-selector isNomminaleSelector=true class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
-    <app-autospin-selector isAutospinSelector=true class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedCounter]="selectedNominale" [spinCounters]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
-    <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
+<div class="block" isSelector=true [ngClass]="{'mobile': isMobile}">
+    <app-nominales-selector
+        *ngIf="showNMSelector"
+        isNomminaleSelector=true
+        class="nominales-selector"
+        [ngClass]="{'open': showNMSelector}"
+        [open]="showNMSelector"
+        [selectedNominale]="selectedNominale"
+        [nominales]="nominales"
+        (nominaleChanged)="nominaleChanged($event)"
+    ></app-nominales-selector>
+    <app-autospin-selector
+        *ngIf="showAutospinSelector"
+        isAutospinSelector=true
+        class="nominales-selector"
+        [ngClass]="{'open': showAutospinSelector}"
+        [open]="showAutospinSelector"
+        [selectedCounter]="selectedNominale"
+        [spinCounters]="autoSpinCount"
+        (nominaleChanged)="autoSpinSelected($event)"
+    ></app-autospin-selector>
+    <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
     <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
         <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
             {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
