--- a/src/app/Views/Elements/bet-block/bet-block.component.scss
+++ b/src/app/Views/Elements/bet-block/bet-block.component.scss
@@ -26,9 +26,12 @@
         }
         &.value {
             font-weight: 900;
-            font-size: 25px;
             color: #fff;
             text-align: left;
+            font-size: 20px;
+            @media screen and (min-width: 992px) {
+                font-size: 25px;
+            }
         }
         &.bet {
             font-weight: 500;
