--- a/src/app/Views/Elements/spin-buttons/spin-buttons.component.scss
+++ b/src/app/Views/Elements/spin-buttons/spin-buttons.component.scss
@@ -4,7 +4,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    
+    @media screen and (min-width: 992px) {
+        flex-direction: column;
+    }
 
     .nominales-selector {
         position: absolute;
