--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,9 +24,12 @@ app-game-container {
     
     .wrapper {
         display: grid;
-        grid-template-rows: minmax(0, 60px) minmax(0, 350px) minmax(0, 100px);
+        grid-template-rows: minmax(0, 60px) minmax(0, 220px) minmax(0, 100px);
         grid-template-columns: minmax(0, 80px) minmax(0, 1fr) minmax(0, 80px);
         height: 100%;
+        @media screen and (min-width: 576px) {
+            grid-template-rows: minmax(0, 60px) minmax(0, 300px) minmax(0, 100px);
+        }
         @media screen and (min-width: 992px) {
             grid-template-rows: minmax(0, 60px) minmax(0, 1fr) minmax(0, auto);
         }
@@ -88,9 +91,9 @@ app-game-container {
         grid-column: 1 / 4;
         display: grid;
         grid-template-columns:minmax(0, 1fr) minmax(0, 2fr) minmax(0, 2fr);
-        gap: 20px;
-        
+        gap: 10px;
         @media screen and (min-width: 992px) {
+            gap: 20px;
         }
 
         app-label-value {
@@ -107,6 +110,13 @@ app-game-container {
         }
 
         app-action-panel {
+            grid-column: 1 / 4;
+            @media screen and (min-width: 992px) {
+                grid-column: initial;
+            }
+        }
+
+        app-spin-buttons {
             grid-column: 1 / 4;
             @media screen and (min-width: 992px) {
                 grid-column: initial;
