--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -9,6 +9,16 @@
         <div class="block last_win">
             <app-label-value [spinning]="data.game.spinning" [clearAnimation]="data.game.freeSpins.isActive" [label]="isBonus ? 'win' : 'last win'" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()"></app-label-value>
         </div>
+        <app-spin-buttons
+          class="buttons"
+          [data]="data"
+          [nominales]="data.game.nominales"
+          [selectedNominale]="data.game.selectedNominale"
+          (spin)="onSpin()"
+          (autoSpin)="onAutoSpin()"
+          (onAction)="bubbleAction($event)"
+          [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}"
+      ></app-spin-buttons>
         <div class="block action_buttons">
             <div class="icon info" (click)="gameInfo('info')"></div>
             <div class="icon volume" [ngClass]="[volume ? 'on' : 'off']" (click)="toggleVolume()"></div>
