--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,17 +46,7 @@
         [isBonus]="isBonus"
         [value]="wonAmmount()"
       ></app-label-value>
-      <app-action-panel [data]="data" (onAction)="handleAction($event)"></app-action-panel>
-      <!-- <app-spin-buttons
-          class="buttons"
-          [data]="data"
-          [nominales]="data.game.nominales"
-          [selectedNominale]="data.game.selectedNominale"
-          (spin)="onSpin()"
-          (autoSpin)="onAutoSpin($event)"
-          (onAction)="bubbleAction($event)"
-          [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}"
-      ></app-spin-buttons> -->
+      <app-action-panel [data]="data" (onAction)="handleAction($event)" (spin)="onSpin()" (autoSpin)="onAutoSpin($event)"></app-action-panel>
     </div>
   </div>
 </div>
