--- a/src/app/Views/action-panel/action-panel.component.scss
+++ b/src/app/Views/action-panel/action-panel.component.scss
@@ -1,20 +1,33 @@
     .data {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: column;
         border-radius: 10px;
         width: initial;
+        height: 100%;
+        display: grid;
+        width: 100%;
+        justify-content: initial;
+        align-items: initial;
+        grid-template-rows: minmax(73px, 73px) minmax(0, 1fr) minmax(50px, 50px);
+        app-spin-buttons {
+            display: block;
+            @media screen and (min-width: 992px) {
+                display: none;
+            }
+        }
         app-label-value {
             display: none;
         }
         @media screen and (min-width: 992px) {
+            height: initial;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             width: 100%;
             padding-inline: 15px;        
             border: 5px solid #b80011;
             background-color: #3E0006;
             display: grid;
             grid-template-columns: auto minmax(0, 4fr) minmax(0, 1fr) auto ;
+            grid-template-rows: initial;
             border-radius: 10px;
             flex-direction: row;
             height: 100px;
@@ -77,6 +90,10 @@
         .block {
             &.balance {
                 flex: 2;
+                display: none;
+                @media screen and (min-width: 992px) {
+                    display: flex;
+                }
             }
 
             &.value {
@@ -100,6 +117,10 @@
 
             &.last_win {
                 flex: 1;
+                display: none;
+                @media screen and (min-width: 992px) {
+                    display: flex;
+                }
             }
 
             &.action_buttons {
