--- a/src/app/Views/Elements/bonus-item/bonus-item.component.html
+++ b/src/app/Views/Elements/bonus-item/bonus-item.component.html
@@ -2,8 +2,7 @@
     <div class="data">
         <div class="text-block">
             <div class="title">  {{ freeSpinName() }}  </div>
-            <div class="price" *ngIf="isSelected == false" (click)="onClick()"> {{ selectedBet * freeSpin.price }} GEL - Buy </div>
-            <div class="price confirm" *ngIf="isSelected == true" (click)="onClick()"> Confirm Buy </div>
+            <div class="price" (click)="onClick()"> {{ selectedBet * freeSpin.price }} GEL - Buy </div>
         </div>
         <div class="leafs-block">
             <div class="leaf"></div>
