--- a/src/app/Modal/bonus-type/bonus-type.component.scss
+++ b/src/app/Modal/bonus-type/bonus-type.component.scss
@@ -5,22 +5,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
-    border-radius: 15px;
+    // border: 2px solid red;
+    // border-radius: 15px;
     overflow: hidden;
-    .background {
-        position: absolute;
-        z-index: 0;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('../../../assets/bonus/modal_background.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: 0.8;
-    }
+    // .background {
+    //     position: absolute;
+    //     z-index: 0;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background: url('../../../assets/bonus/modal_background.png');
+    //     background-position: center;
+    //     background-repeat: no-repeat;
+    //     background-size: cover;
+    //     opacity: 0.8;
+    // }
     .content {
         display: flex;
         justify-content: space-evenly;
@@ -58,9 +58,13 @@
             padding-bottom: 15px;
         }
         .buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             .btn {
                 cursor: pointer;
                 border: 2px solid red;
+                background: linear-gradient(#F57403, #D7340F);
                 color: #FFF;
                 width: 180px;
                 height: 60px;
@@ -70,6 +74,7 @@
                 border-radius: 10px;
                 font-size: 25px;
                 font-weight: 900;
+                margin: 15px;
             }
         }
     }
