--- a/src/app/Modal/modal.component.scss
+++ b/src/app/Modal/modal.component.scss
@@ -9,6 +9,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    &.buy_freespin {
+        background-color: rgba($color: #000000, $alpha: 0.8);
+    }
     .cont {
         .header {
             display: flex;
