--- a/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
+++ b/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
@@ -19,13 +19,18 @@
         [spinCounters]="autoSpinCount"
         (nominaleChanged)="autoSpinSelected($event)"
     ></app-autospin-selector>
-    <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
+    <div *ngIf="!isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
+    <div *ngIf="isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
+        <div class="icon"></div>
+        <div class="value"> {{ nominale }} </div>
+    </div>
     <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
         <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
             {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
         </div>
     </div>
-    <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
+    <div *ngIf="isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
+    <div *ngIf="!isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
         <div class="icon"></div>
         <div class="value"> {{ nominale }} </div>
     </div>
