--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -6,11 +6,12 @@
         <app-bet-block *ngFor="let item of betMultipliers;let i=index" [spinning]="data.game.spinning" currency="GEL" [value]="bet(item)" [index]="i" [isSelected]="bet(item) == selectedBet" (onAction)="bubbleAction($event)"></app-bet-block>
     </div>
     <div class="block last_win">
-        <app-label-value [spinning]="data.game.spinning" [clearAnimation]="data.game.freeSpins.isActive" [label]="isBonus ? 'win' : 'last win'" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()"></app-label-value>
+        <app-label-value [spinning]="data.game.spinning" [clearAnimation]="data.game.freeSpins.isActive" [label]="isBonus ? 'win' : 'last win'" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()" (onAction)="bubbleAction($event)"></app-label-value>
     </div>
     <app-spin-buttons
         class="buttons"
         [data]="data"
+        [isMobile]="true"
         [nominales]="data.game.nominales"
         [selectedNominale]="data.game.selectedNominale"
         (spin)="onSpin()"
