--- a/src/app/Views/Elements/autospin-selector/autospin-selector.component.html
+++ b/src/app/Views/Elements/autospin-selector/autospin-selector.component.html
@@ -1,4 +1,4 @@
-<div class="cont" [ngClass]="{'open': open == true}">
+<div class="cont" [ngClass]="[isMobile ? 'mobile' : '', open ? 'open': '']">
     <div class="block">
         <div class="item" [ngClass]="{'selected': spinCounter == selectedCounter}" *ngFor="let spinCounter of spinCounters" (click)="selectNominale(spinCounter)">
             {{ spinCounter > 0 ? spinCounter : '&#8734;' }}
