--- a/src/app/Views/Elements/autospin-selector/autospin-selector.component.scss
+++ b/src/app/Views/Elements/autospin-selector/autospin-selector.component.scss
@@ -12,6 +12,25 @@
         width: 320px;
         height: 80px;
     }
+    &.mobile {
+        transform: rotate(90deg);
+        .block {
+            .item {
+                width: 100%;
+                height: 90%;
+                transform: rotate(-90deg);
+                &:not(:last-child):after {
+                    content: "";
+                    background: rgba(255, 255, 255, 0.6);
+                    position: absolute;
+                    bottom: 0px;
+                    height: 2px;
+                    width: 90%;
+                    left: 5%;
+                }
+            }
+        }
+    }
 
     .block {
         width: 310px;
