--- a/src/app/Views/Elements/nominales-selector/nominales-selector.component.html
+++ b/src/app/Views/Elements/nominales-selector/nominales-selector.component.html
@@ -1,4 +1,4 @@
-<div class="cont" [ngClass]="{'open': open == true}">
+<div class="cont" [ngClass]="[isMobile ? 'mobile' : '', open ? 'open': '']">
     <div class="block">
         <div class="item" [ngClass]="{'selected': nominale == selectedNominale}" *ngFor="let nominale of nominales" (click)="selectNominale(nominale)">
             {{ nominale.toFixed(2) }}
