--- a/src/app/Views/Elements/nominales-selector/nominales-selector.component.scss
+++ b/src/app/Views/Elements/nominales-selector/nominales-selector.component.scss
@@ -12,6 +12,22 @@
         width: 320px;
         height: 80px;
     }
+    &.mobile {
+        transform: rotate(90deg);
+        .block {
+            .item {
+                transform: rotate(-90deg);
+                &:not(:last-child):after {
+                    content: "";
+                    background: rgba(255, 255, 255, 0.6);
+                    position: absolute;
+                    bottom: -1px;
+                    height: 2px;
+                    width: 90%;
+                }
+            }
+        }
+    }
 
     .block {
         width: 310px;
