--- a/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
+++ b/src/app/Views/Elements/spin-buttons/spin-buttons.component.html
@@ -7,6 +7,7 @@
         [open]="showNMSelector"
         [selectedNominale]="selectedNominale"
         [nominales]="nominales"
+        [isMobile]="isMobile"
         (nominaleChanged)="nominaleChanged($event)"
     ></app-nominales-selector>
     <app-autospin-selector
@@ -17,6 +18,7 @@
         [open]="showAutospinSelector"
         [selectedCounter]="selectedNominale"
         [spinCounters]="autoSpinCount"
+        [isMobile]="isMobile"
         (nominaleChanged)="autoSpinSelected($event)"
     ></app-autospin-selector>
     <div *ngIf="!isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
@@ -24,9 +26,9 @@
         <div class="icon"></div>
         <div class="value"> {{ nominale }} </div>
     </div>
-    <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
-        <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
-            {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
+    <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress || (spinning && isMobile)}" (click)="onSpin()" #spinButton>
+        <div *ngIf="autoSpinInProgress || (spinning && isMobile)" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
+            {{ (spinning && isMobile) ? '' : (bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining)) }}
         </div>
     </div>
     <div *ngIf="isMobile" [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="toggleAutospinSelector()"></div>
