--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -14,10 +14,9 @@
         [isMobile]="true"
         [nominales]="data.game.nominales"
         [selectedNominale]="data.game.selectedNominale"
-        (spin)="onSpin()"
-        (autoSpin)="onAutoSpin()"
+        (spin)="onSpin($event)"
+        (autoSpin)="onAutoSpin($event)"
         (onAction)="bubbleAction($event)"
-        [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}"
     ></app-spin-buttons>
     <div class="block action_buttons">
         <div class="icon info" (click)="gameInfo('info')"></div>
